fix(post.type, reports): change like and view fild names and add user to post reports

--- a/src/app/features/homepage/results/results.component.html
+++ b/src/app/features/homepage/results/results.component.html
@@ -177,11 +177,11 @@
           <div class="reaction-info">
             <div>
               <mat-icon>favorite</mat-icon>
-              <span>{{ post.likes }} Me gusta</span>
+              <span>{{ post.total_likes }} Me gusta</span>
             </div>
             <div>
               <mat-icon>visibility</mat-icon>
-              <span>{{ post.views }} Visitas</span>
+              <span>{{ post.total_views }} Visitas</span>
             </div>
           </div>
 
