--- a/src/app/features/posts/post-detail/post-detail.component.html
+++ b/src/app/features/posts/post-detail/post-detail.component.html
@@ -133,11 +133,11 @@
                 <div class="flex_between_center">
                     <div class="flex_start_center gap-05">
                         <mat-icon>favorite</mat-icon>
-                        <span>{{ post.likes }} Me gusta</span>
+                        <span>{{ post.total_likes }} Me gusta</span>
                     </div>
                     <div class="flex_start_center gap-05">
                         <mat-icon>visibility</mat-icon>
-                        <span>{{ post.views }} Visitas</span>
+                        <span>{{ post.total_views }} Visitas</span>
                     </div>
                 </div>
             </div>
