--- a/src/app/features/posts/create-post/create-post.component.html
+++ b/src/app/features/posts/create-post/create-post.component.html
@@ -82,13 +82,17 @@
           </mat-select>
           <mat-error *ngIf="this.axisControl?.hasError('required')">Este campo es requerido</mat-error>
         </mat-form-field>
-  
+        
         <mat-form-field class="description-textarea" appearance="outline">
           <mat-label>Descripción</mat-label>
           <textarea matInput 
           formControlName="description"
             cdkTextareaAutosize cdkAutosizeMinRows="3" cdkAutosizeMaxRows="20">
           </textarea>
+          <div class="flex_end_center">
+            <mat-hint *ngIf="this.descriptionControl.valid">{{ this.descriptionControl.value.length }}/1000</mat-hint>
+            <mat-error *ngIf="this.descriptionControl?.hasError('maxlength')">{{ this.descriptionControl.value.length }}/1000</mat-error>
+          </div>
         </mat-form-field>
 
         <div class="flex_justify_end">
