--- a/src/app/features/posts/post-detail/post-detail.component.html
+++ b/src/app/features/posts/post-detail/post-detail.component.html
@@ -66,13 +66,21 @@
                         <mat-icon>more_vert</mat-icon>
                     </button>
                     <mat-menu #menu="matMenu">
-                        <button mat-menu-item [disabled]="post.user.id === user?.id" (click)="reportPost(post)">
-                        <mat-icon>report</mat-icon>
-                        <span>Reportar publicación</span>
+                        <button mat-menu-item *ngIf="post.user.id === user?.id" [routerLink]="['/posts/edit', post.id]">
+                            <mat-icon>edit</mat-icon>
+                            <span>Editar publicación</span>
                         </button>
-                        <button mat-menu-item [disabled]="post.user.id === user?.id" (click)="reportUser(post)">
-                        <mat-icon>report</mat-icon>
-                        <span>Reportar usuario</span>
+                        <button mat-menu-item *ngIf="post.user.id === user?.id" (click)="deletePost(post)">
+                            <mat-icon>delete</mat-icon>
+                            <span>Eliminar publicación</span>
+                        </button>
+                        <button mat-menu-item *ngIf="post.user.id !== user?.id" (click)="reportPost(post)">
+                            <mat-icon>report</mat-icon>
+                            <span>Reportar publicación</span>
+                        </button>
+                        <button mat-menu-item *ngIf="post.user.id !== user?.id" (click)="reportUser(post)">
+                            <mat-icon>report</mat-icon>
+                            <span>Reportar usuario</span>
                         </button>
                     </mat-menu>
                 </div>
