--- a/src/assets/styles/helpers/_display.scss
+++ b/src/assets/styles/helpers/_display.scss
@@ -83,6 +83,14 @@
   flex: 1;
 }
 
+.flex-grow-2 {
+  flex: 2;
+}
+
+.flex-grow-3 {
+  flex: 3;
+}
+
 // .flex-shrink-0 {
 //   flex-shrink: 0;
 // }
