--- a/src/app/features/user/edit-profile/edit-profile.component.html
+++ b/src/app/features/user/edit-profile/edit-profile.component.html
@@ -53,7 +53,7 @@
                         <ngx-mat-select-search 
                             [searching]="isLocationsLoading"
                             [formControl]="searchLocation"
-                            placeholderLabel="Buscar comuna"
+                            placeholderLabel="Buscar por comuna/region"
                             noEntriesFoundLabel="No se encontraron resultados">
                         </ngx-mat-select-search>
                         </mat-option>
@@ -66,8 +66,12 @@
             </mat-form-field>
 
             <div class="flex_justify_end">
-                <button mat-raised-button color="primary" type="submit" *ngIf="!isSaveLoading">Guardar</button>
-                <app-square-loader *ngIf="isSaveLoading"></app-square-loader>
+                <button mat-raised-button color="primary" type="submit" *ngIf="!isSaving && !isAlreadySaved">Guardar</button>
+                <button mat-raised-button color="primary" type="button"  *ngIf="!isSaving && isAlreadySaved">
+                    Guardado
+                    <mat-icon>done</mat-icon>
+                </button>
+                <app-square-loader *ngIf="isSaving"></app-square-loader>
             </div>
         </form>
 
