fix(create-post): fix upload file

--- a/src/app/features/posts/create-post/create-post.component.html
+++ b/src/app/features/posts/create-post/create-post.component.html
@@ -96,7 +96,11 @@
         </mat-form-field>
 
         <div class="flex_justify_end">
-          <button type="submit" mat-raised-button color="primary" *ngIf="!isLoading">
+          <button type="submit" mat-raised-button color="primary" *ngIf="!isLoading && form.valid">
+            <mat-icon>save</mat-icon>
+            <span>Guardar</span>
+          </button>
+          <button type="submit" mat-raised-button color="warn" *ngIf="!isLoading && form.invalid">
             <mat-icon>save</mat-icon>
             <span>Guardar</span>
           </button>
@@ -127,7 +131,7 @@
           <div class="file-icon xls-style">.ppt</div>
         </div>
         <p>o has click para buscar en tu dispositivo</p>
-        <input type="file" (change)="onFileSelected($event)"multiple #inputFile>
+        <input type="file" (change)="onFileSelected($event)" (click)="inputFile.value = ''" multiple #inputFile>
         <mat-error *ngIf="this.documentsControl?.hasError('required') && this.form.touched">Debes subir al menos un archivo</mat-error>
         <mat-error *ngIf="this.documentsControl?.hasError('max')">{{ maxFilesMsg }}</mat-error>
         <mat-error *ngIf="this.documentsControl?.hasError('maxSize')">{{ maxFileSizeMsg }}</mat-error>
