--- a/src/app/features/auth/register/register.component.scss
+++ b/src/app/features/auth/register/register.component.scss
@@ -2,7 +2,8 @@
     display: flex;
     flex-direction: column;
 
-    min-height: 100%;
+    min-height: 100vh;
+    // min-height: 100%;
 
     background-image: url('/assets/images/bg-desktop-pink.png');
     // background-size: cover;
@@ -53,6 +54,7 @@
     
     > mat-card-content {
         padding: 1rem;
+        padding-top: 0.5rem;
     }
 }
 
@@ -71,7 +73,7 @@
 .buttons {
     display: grid;
     place-items: center;
-    gap: 0.5rem;
+    // gap: 0.5rem;
 }
 
 .register-button {
