--- a/src/assets/styles/helpers/_display.scss
+++ b/src/assets/styles/helpers/_display.scss
@@ -74,10 +74,10 @@
   justify-content: center;
 }
 
-// .flex_center_center {
-//   justify-content: center;
-//   align-items: center;
-// }
+.flex_center_center {
+  justify-content: center;
+  align-items: center;
+}
 
 .flex-grow-1 {
   flex: 1;
