--- a/src/app/features/auth/login/login.component.scss
+++ b/src/app/features/auth/login/login.component.scss
@@ -2,7 +2,8 @@
     display: flex;
     flex-direction: column;
 
-    min-height: 100%;
+    min-height: 100vh;
+    // min-height: 100%;
 
     // background-color: var(--primary-color);
     background-image: url('/assets/images/bg-desktop-light-blue.png');
