fix(edit-profile): fix spelling error

--- a/src/app/features/user/edit-profile/edit-profile.component.html
+++ b/src/app/features/user/edit-profile/edit-profile.component.html
@@ -136,8 +136,8 @@
             <div class="info-card">
                 <h2>Ayúdanos contandonos más sobre tí  :)</h2>
                 <h3>¿Para que se usa esta información?</h3>
-                <p>Esta información será visible  para todos los usuarios del sitio, incluso para usuarios no registrados. Además, esta podrá ser utilizada por Planishare para realizar análisis o nuevas carácteristicas para la plataforma.</p>
-                <p>No te preocupes, tus publicaciones y datos de la cuenta serán utilizados exclusivamente por Planishare y jamás venderemos ni difundiremos tu información sin tu concentimiento.</p>
+                <p>Esta información será visible  para todos los usuarios del sitio, incluso para usuarios no registrados.</p>
+                <p>Además, será utilizada exclusivamente por Planishare para realizar análisis o nuevas carácteristicas para la plataforma.</p>
             </div>
         </div>
     </mat-card-content>
