--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,7 @@
-<ng-container *ngIf="isAuthCompleted">
+<ng-container *ngIf="isAuthCompleted && !this.inMaintenance">
     <router-outlet></router-outlet>
 </ng-container>
 
-<div class="loader" *ngIf="!isAuthCompleted">
-    <!-- <mat-spinner></mat-spinner> -->
+<div class="loader" *ngIf="!isAuthCompleted || this.inMaintenance">
     <app-book-loader></app-book-loader>
 </div>
