--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,67 +1,10 @@
-
-// Custom Theming for Angular Material
-// For more information: https://material.angular.io/guide/theming
-@use '@angular/material' as mat;
-// Plus imports for other components in your app.
-
-$fontConfig: (
-  display-4: mat.define-typography-level(112px, 112px, 400, 'Manrope', -0.0134em),
-  display-3: mat.define-typography-level(56px, 56px, 400, 'Manrope', -0.0089em),
-  display-2: mat.define-typography-level(45px, 48px, 400, 'Manrope', 0.0000em),
-  display-1: mat.define-typography-level(34px, 40px, 400, 'Manrope', 0.0074em),
-  headline: mat.define-typography-level(24px, 32px, 400, 'Manrope', 0.0000em),
-  title: mat.define-typography-level(20px, 32px, 400, 'Manrope', 0.0075em),
-  subheading-2: mat.define-typography-level(16px, 28px, 400, 'Manrope', 0.0094em),
-  subheading-1: mat.define-typography-level(15px, 24px, 400, 'Manrope', 0.0067em),
-  body-2: mat.define-typography-level(14px, 24px, 400, 'Manrope', 0.0179em),
-  body-1: mat.define-typography-level(14px, 20px, 400, 'Manrope', 0.0179em),
-  button: mat.define-typography-level(14px, 14px, 400, 'Manrope', 0.0893em),
-  caption: mat.define-typography-level(12px, 20px, 400, 'Manrope', 0.0333em),
-  input: mat.define-typography-level(inherit, 1.125, 400, 'Manrope', 1.5px)
-);
-
-// Include the common styles for Angular Material. We include this here so that you only
-// have to load a single css file for Angular Material in your app.
-// Be sure that you only ever include this mixin once!
-@include mat.core($fontConfig);
-
-// Define the palettes for your theme using the Material Design palettes available in palette.scss
-// (imported above). For each palette, you can optionally specify a default, lighter, and darker
-// hue. Available color palettes: https://material.io/design/color/
-$planishare-primary: mat.define-palette(mat.$deep-purple-palette, A200);
-$planishare-accent: mat.define-palette(mat.$orange-palette, A100);
-
-// The warn palette is optional (defaults to red).
-$planishare-warn: mat.define-palette(mat.$red-palette, A200);
-
-// Create the theme object. A theme consists of configurations for individual
-// theming systems such as "color" or "typography".
-$planishare-theme: mat.define-light-theme((
-  color: (
-    primary: $planishare-primary,
-    accent: $planishare-accent,
-    warn: $planishare-warn,
-  )
-));
-$planishare-dark-theme: mat.define-dark-theme((
-  color: (
-    primary: $planishare-accent,
-    accent: $planishare-primary,
-    warn: $planishare-warn,
-  )
-));
-
-// Include theme styles for core and each component used in your app.
-// Alternatively, you can import and @include the theme mixins for each component
-// that you are using.
-@include mat.all-component-themes($planishare-theme);
-// @include mat.all-component-themes($planishare-dark-theme);
+// Material custom theme
+@import './assets/styles/material/material-theme';
 
 // Normalize
-@import '~normalize.css';
+// @import '~normalize.css'; DELETE THIS
 
-// Anuglar Material generated
 html, body { height: 100%;}
-body { margin: 0; font-family: 'Manrope', Roboto, "Helvetica Neue", sans-serif; }
+body { margin: 0; font-family: 'Manrope', sans-serif; }
 
 @import './assets/styles/index';
