--- a/src/assets/styles/_index.scss
+++ b/src/assets/styles/_index.scss
@@ -1,1 +1,7 @@
+@import './design/reset';
+
+@import './design/fonts';
 @import './design/colors';
+
+@import './design/components';
+@import './helpers/utility-classes';
