--- a/src/app/layouts/main-layout/main-layout.component.html
+++ b/src/app/layouts/main-layout/main-layout.component.html
@@ -5,7 +5,7 @@
         </ng-container>
     </mat-sidenav>
     <mat-sidenav-content>
-        <app-navbar class="navbar"></app-navbar>
+        <!-- <app-navbar class="navbar"></app-navbar> -->
         <router-outlet></router-outlet>
     </mat-sidenav-content>
 </mat-sidenav-container>
