fix(homepage): remove old logic and fix styles

--- a/src/app/features/homepage/homepage/homepage.component.html
+++ b/src/app/features/homepage/homepage/homepage.component.html
@@ -1,15 +1,15 @@
-<main class="hero container">
+<div class="hero container">
   <div class="hero__text">
     <h1 class="fs-xx-large fw-600 text-blue-dark text-shadow-1">Busca y comparte planificaciones de enseñanza básica</h1>
-    <a class="rounded-button fs-large fw-600 box-shadow-2" [routerLink]="['/', 'results']">
+    <a class="rounded-button fs-medium fw-600 box-shadow-2" [routerLink]="['/', 'results']">
       <span>Ver planificaciones</span>
       <mat-icon>arrow_forward</mat-icon>
     </a>
   </div>
-  <div class="hero_img">
+  <div class="hero__img">
     <picture>
       <source srcset="/assets/images/homepage_hero.png" media="(min-width: 48rem)">
       <img src="/assets/images/homepage_hero-mobile.png" alt="Ilustración compartiendo archivos">
     </picture>
   </div>
-</main>
+</div>
