--- a/src/app/features/homepage/homepage/homepage.component.scss
+++ b/src/app/features/homepage/homepage/homepage.component.scss
@@ -1,5 +1,5 @@
 .hero {
-    // height: 100%;
+    min-height: 100%;
 
     display: flex;
     flex-direction: column-reverse;
@@ -14,13 +14,9 @@
     h1 {
         margin-bottom: 1rem;
     }
-
-    a {
-        letter-spacing: 3px;
-    }
 }
 
-@media (min-width: 62rem) {
+@media (min-width: 64rem) {
     .hero {
         flex-direction: row;
         justify-content: space-between;
