--- a/src/app/shared/components/navbar/navbar.component.html
+++ b/src/app/shared/components/navbar/navbar.component.html
@@ -1,51 +1,61 @@
-<div [style.background-color]="(buttonConfig|async)?.backgroundColor">
-    <nav class="navbar" *ngIf="!isTablet">
-        <button mat-raised-button class="logo" [routerLink]="['/']">
-            <span class="logo-text">Planishare 📖</span>
-        </button>
-        <ul>
+<header class="header container">
+    <button mat-icon-button (click)="openSidenav()" *ngIf="!isDesktop">
+        <mat-icon>menu</mat-icon>
+    </button>
+
+    <a class="logo" [routerLink]="['/']">
+        <span>📖</span>
+        <span>Plansihare</span>
+    </a>
+
+    <button mat-icon-button (click)="openSidenav()" *ngIf="!isDesktop">
+        <mat-icon>person</mat-icon>
+    </button>
+
+    <!-- Desktop navbar -->
+    <nav class="navbar" *ngIf="isDesktop">
+        <ul class="navbar__list fs-small fw-700">
             <li>
-                <button mat-raised-button [routerLink]="['/tops']" routerLinkActive="button-active-red">
+                <a class="rounded-button box-shadow-2" [routerLink]="['/tops']">
                     <mat-icon>local_fire_department</mat-icon>
-                    Tops
-                </button>
+                    <span>Tops</span>
+                </a>
             </li>
             <li *ngIf="!isUserAuth">
-                <button mat-raised-button [routerLink]="['/auth/register']" routerLinkActive="button-active">
+                <a class="rounded-button box-shadow-2" [routerLink]="['/auth/register']">
                     <mat-icon>person_add</mat-icon>
-                    Registrarse
-                </button>
+                    <span>Registrarse</span>
+                </a>
             </li>
             <li *ngIf="!isUserAuth">
-                <button mat-raised-button [routerLink]="['/auth/login']" routerLinkActive="button-active">
+                <a class="rounded-button box-shadow-2" [routerLink]="['/auth/login']">
                     <mat-icon>login</mat-icon>
-                    Iniciar Sesión
-                </button>
+                    <span>Iniciar Sesión</span>
+                </a>
             </li>
             <li *ngIf="isUserAuth">
-                <button mat-raised-button [routerLink]="['/posts/user']" routerLinkActive="button-active">
+                <a class="rounded-button box-shadow-2" [routerLink]="['/posts/user']">
                     <mat-icon>description</mat-icon>
-                    Mis publicaciones
-                </button>
+                    <span>Mis publicaciones</span>
+                </a>
             </li>
             <li *ngIf="isUserAuth">
-                <button mat-raised-button [routerLink]="['/posts/create']" routerLinkActive="button-active">
+                <a class="rounded-button box-shadow-2" [routerLink]="['/posts/create']">
                     <mat-icon>control_point</mat-icon>
-                    Crear publicación
-                </button>
+                    <span>Crear publicación</span>
+                </a>
             </li>
-            <li *ngIf="(buttonConfig|async)?.showSeachButton">
-                <button mat-raised-button class="search-button" [routerLink]="['/', 'results']">
+            <li>
+                <a class="rounded-button box-shadow-2" [routerLink]="['/results']">
                     <mat-icon>search</mat-icon>
                     <span>Buscar</span>
-                </button>
+                </a>
             </li>
             <li *ngIf="isUserAuth">
-                <button mat-mini-fab
-                class="profile-button"
-                [matMenuTriggerFor]="menu"
-                aria-label="Menu de perfil">
-                    <mat-icon>person</mat-icon>
+                <button class="circle-button box-shadow-2"
+                    [matMenuTriggerFor]="menu"
+                    aria-label="Menu de perfil">
+                        <mat-icon>person</mat-icon>
                 </button>
                 <mat-menu #menu="matMenu">
                     <button mat-menu-item [routerLink]="['/user/edit-profile']">
@@ -60,17 +70,4 @@
             </li>
         </ul>
     </nav>
-    
-    <nav class="navbar" *ngIf="isTablet">
-        <button mat-icon-button (click)="openSidenav()">
-            <mat-icon class="menu-icon">menu</mat-icon>
-        </button>
-        <button mat-raised-button class="logo-mobile" [routerLink]="['/']">
-            Planishare
-        </button>
-        <!-- <button [ngStyle]="{'visibility': !(buttonConfig|async)?.showSeachButton ? 'hidden' : 'visible'}" mat-raised-button class="simple-icon" (click)="openSearchDialog()"> -->
-        <button [ngStyle]="{'visibility': !(buttonConfig|async)?.showSeachButton ? 'hidden' : 'visible'}" mat-raised-button class="simple-icon" [routerLink]="['/', 'results']">
-            <mat-icon>search</mat-icon>
-        </button>
-    </nav>
-</div>    
+</header>
