--- a/src/app/shared/components/navbar/navbar.component.scss
+++ b/src/app/shared/components/navbar/navbar.component.scss
@@ -1,99 +1,29 @@
-// INFO: Navbar height (considerar como 4rem)
-// desktop: 52px
-// mobile: 56px
-
-:host {
-    display: block;
-    // background-color: #faebd7;
-}
-
-.navbar {
+.header {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    
-    padding: 0.5rem 4rem;
-    
-    ul {
-        list-style-type: none;
-        
-        display: flex;
-        align-items: center;
-        gap: 0.6rem;
-
-        margin: 0;
-        padding: 0;
-    }
 }
 
 .logo {
-    background-color: var(--green-dark-color);
-    
-    color: var(--light-text);
-    font-weight: 500;
-    border-radius: 10px;
-    font-size: clamp(1.2rem, 1.7000rem + -0.4167vw, 1rem);
-    
-    box-shadow: 0px 1px 3px #303030;
-
-    padding: 0em 0.3em 0em 1.1em;
-
+    text-decoration: none;
+    color: hsl(var(--clr-blue-dark));
     display: flex;
     align-items: center;
-    justify-content: center;
-    
-    .logo-text {
-        margin-right: 1rem;
-    }
+    font-size: var(--fs-large);
+    font-weight: 800;
 }
 
-.search-button {
-    border-radius: 100px;
-}
-
-.logo-mobile {
-    background-color: var(--green-dark-color);
-    
-    color: var(--light-text);
-    font-weight: 500;
-    border-radius: 10px;
-    font-size: clamp(1.2rem, 1.7000rem + -0.4167vw, 1rem);
-    
-    box-shadow: 0px 1px 3px #303030;
-
-    padding: 0.1 1.1em;
-
+.navbar__list {
     display: flex;
+    list-style: none;
+    margin: 0;
+    padding: 1rem 0;
+    gap: .5rem;
 }
 
-.menu-icon {
-    color: var(--dark-text);
-}
-
-.profile-button {
-    color: var(--button-text);
-    background-color: var(--button-background);
-}
-
-.simple-icon {
-    line-height: normal;
-    min-width: auto;
-    padding: 0.2em 0.5em;
-    border-radius: 100px;
-}
-
-.button-active {
-    background-color: var(--primary-color);
-    color: var(--light-text);
-}
-
-.button-active-red {
-    background-color: var(--warn-color);
-    color: var(--light-text);
-}
-
-@media (max-width: 48rem) {
-    .navbar {
-        padding: 0.5rem 1rem;
-    }
+.rounded-button {
+    --bg-color: hsl(var(--clr-pink-light));
+    --text-color: hsl(var(--clr-blue-dark));
+    --pd-inline: 1.35em;
+    --pd-block: .45em;
 }
