--- a/src/assets/styles/_index.scss
+++ b/src/assets/styles/_index.scss
@@ -4,5 +4,5 @@
 @import './design/colors';
 
 @import './design/components';
-@import './helpers/utility-classes';
+@import './helpers/util';
 @import './helpers/misc';
