--- a/src/app/shared/components/navigation-sidenav/navigation-sidenav.component.html
+++ b/src/app/shared/components/navigation-sidenav/navigation-sidenav.component.html
@@ -1,82 +1,54 @@
-<ul class="navigation-sidenav">
-    <li>
-        <button
-            *ngIf="!isUserAuth"
-            mat-button
-            class="menu-button"
-            [routerLink]="['/auth/register']"
-            (click)="hideSidenav()">
-                <mat-icon>person_add</mat-icon>
-                <span>Registrarse</span>
-        </button>
+<nav class="navbar">
+  <button class="navbar__close text-white" mat-icon-button (click)="hideSidenav();">
+    <mat-icon>close</mat-icon>
+  </button>
+
+  <ul class="navbar__list">
+    <li *ngIf="!isUserAuth">
+      <a [routerLink]="['/auth/register']" class="navbar__link p-l-container" routerLinkActive="active" (click)="hideSidenav()">
+        <mat-icon>person_add</mat-icon>
+        <span>Registrarse</span>
+      </a>
+    </li>
+    <li *ngIf="!isUserAuth">
+      <a [routerLink]="['/auth/login']" class="navbar__link p-l-container"
+        routerLinkActive="active" (click)="hideSidenav()">
+        <mat-icon>login</mat-icon>
+        <span>Iniciar sesión</span>
+      </a>
+    </li>
+    <li *ngIf="isUserAuth">
+      <a [routerLink]="['/user/edit-profile']" class="navbar__link p-l-container"
+        routerLinkActive="active" (click)="hideSidenav()">
+        <mat-icon>person</mat-icon>
+        <span>Mi perfil</span>
+      </a>
+    </li>
+    <li *ngIf="isUserAuth">
+      <a [routerLink]="['/posts/user']" class="navbar__link p-l-container"
+        routerLinkActive="active" (click)="hideSidenav()">
+        <mat-icon>description</mat-icon>
+        <span>Mis publicaciones</span>
+      </a>
+    </li>
+    <li *ngIf="isUserAuth">
+      <a [routerLink]="['/posts/create']" class="navbar__link p-l-container"
+        routerLinkActive="active" (click)="hideSidenav()">
+        <mat-icon>control_point</mat-icon>
+        <span>Crear publicación</span>
+      </a>
     </li>
     <li>
-        <button
-            *ngIf="!isUserAuth"
-            mat-button
-            class="menu-button"
-            [routerLink]="['/auth/login']"
-            (click)="hideSidenav()">
-                <mat-icon>login</mat-icon>
-                <span>Iniciar sesión</span>
-        </button>
+      <a [routerLink]="['/tops']" class="navbar__link p-l-container"
+        routerLinkActive="active" (click)="hideSidenav()">
+        <mat-icon>local_fire_department</mat-icon>
+        <span>Tops</span>
+      </a>
     </li>
-    <li>
-        <button
-            *ngIf="isUserAuth"
-            mat-button
-            class="menu-button"
-            [routerLink]="['/user/edit-profile']"
-            routerLinkActive="active"
-            (click)="hideSidenav()">
-                <mat-icon>person</mat-icon>
-                <span>Mi perfil</span>
-        </button>
-    </li>
-    <li>
-        <button
-            *ngIf="isUserAuth"
-            mat-button
-            class="menu-button"
-            [routerLink]="['/posts/user']"
-            routerLinkActive="active"
-            (click)="hideSidenav()">
-                <mat-icon>description</mat-icon>
-                <span>Mis publicaciones</span>
-        </button>
-    </li>
-    <li>
-        <button
-            *ngIf="isUserAuth"
-            mat-button
-            class="menu-button"
-            [routerLink]="['/posts/create']"
-            routerLinkActive="active"
-            (click)="hideSidenav()">
-                <mat-icon>control_point</mat-icon>
-                <span>Crear publicación</span>
-        </button>
-    </li>
-    <li>
-        <button
-            mat-button
-            class="menu-button"
-            [routerLink]="['/tops']"
-            routerLinkActive="active"
-            (click)="hideSidenav()">
-                <mat-icon>local_fire_department</mat-icon>
-                <span>Tops</span>
-        </button>
-    </li>
-    <li>
-        <button
-            *ngIf="isUserAuth"
-            mat-button
-            class="menu-button"
-            (click)="hideSidenav(); logout()">
-                <mat-icon>logout</mat-icon>
-                <span>Cerrar sesión</span>
-        </button>
-    </li>
-</ul>
-<!-- <mat-divider></mat-divider> -->
+  </ul>
+
+  <button *ngIf="isUserAuth" class="rounded-button" (click)="hideSidenav(); logout()">
+    <mat-icon>logout</mat-icon>
+    <span>Cerrar sesión</span>
+  </button>
+</nav>
