--- a/src/app/shared/components/navigation-sidenav/navigation-sidenav.component.scss
+++ b/src/app/shared/components/navigation-sidenav/navigation-sidenav.component.scss
@@ -1,29 +1,32 @@
-app-navigation-sidenav {
-    ul {
-        background-color: var(--dark-background);
-        color: var(--light-text);
+.navbar {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    gap: 2rem;
+}
 
-        min-height: 100%;
+.navbar__list {
+    list-style: none;
+    margin: 0;
+    padding: 0;
+    width: 100%;
+}
 
-        list-style-type: none;
-        
-        padding: 0;
-        margin: 0;
-    }
+.navbar__link {
+    text-decoration: none;
+    color: hsl(var(--clr-white));
+    display: flex;
+    align-items: center;
+    gap: .5em;
+    padding-block: .5em;
+}
 
-    .menu-button {
-        padding: 0.5em 0;
-        width: 100%;
-    }
+.navbar__close {
+    // margin-left: calc(min(5vw, 2rem) - 16px);
+}
 
-    .mat-button-wrapper {
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        gap: 0.5em;
-    }
-
-    .active {
-        background-color: rgba($color: #ffffff, $alpha: 0.1);
-    }
+.rounded-button {
+    --bg-color: hsl(var(--clr-blue));
+    --p-y: .25em;
+    align-self: center;
 }
