--- a/src/app/features/homepage/results/results.component.html
+++ b/src/app/features/homepage/results/results.component.html
@@ -56,7 +56,7 @@
     <button
       mat-raised-button
       class="delete-button"
-      *ngIf="showDeleteButton"
+      *ngIf="showRemoveFilters"
       (click)="clearFilterControls()">
       <mat-icon>delete</mat-icon>
     </button>
@@ -105,14 +105,14 @@
             src="/assets/images/doc-test.jpg"
             alt="document-image"
             class="card-image-desktop"
-            *ngIf="!isMobile"
+            *ngIf="!!isDesktop"
             (click)="navigateToDetail(post.id)"> -->
           <div class="card-content">
             <!-- <img
               src="/assets/images/doc-test.jpg"
               alt="document-image"
               class="card-image-mobile"
-              *ngIf="isMobile"
+              *ngIf="!isDesktop"
               (click)="navigateToDetail(post.id)"> -->
             <div class="flex_between_center">
               <mat-card-subtitle>{{ post.user|getUsername }} - {{ post.created_at|timeAgo }}</mat-card-subtitle>
@@ -131,11 +131,11 @@
                     <mat-icon>delete</mat-icon>
                     <span>Eliminar publicación</span>
                 </button>
-                <button mat-menu-item *ngIf="post.user.id !== user?.id" (click)="reportPost(post)">
+                <button mat-menu-item *ngIf="post.user.id !== user?.id" (click)="report(post, reportType.POST_REPORT)">
                     <mat-icon>report</mat-icon>
                     <span>Reportar publicación</span>
                 </button>
-                <button mat-menu-item *ngIf="post.user.id !== user?.id" (click)="reportUser(post)">
+                <button mat-menu-item *ngIf="post.user.id !== user?.id" (click)="report(post, reportType.USER_REPORT)">
                     <mat-icon>report</mat-icon>
                     <span>Reportar usuario</span>
                 </button>
@@ -157,8 +157,8 @@
   
               <div class="doc-types-text">
                 <mat-icon>description</mat-icon>
-                <span *ngIf="isMobile">{{ (post.suporting_material?.length ?? 0) + 1 }}</span>
-                <span *ngIf="!isMobile">{{ (post.suporting_material?.length ?? 0) + 1 }} Documentos</span>
+                <span *ngIf="!isDesktop">{{ (post.suporting_material?.length ?? 0) + 1 }}</span>
+                <span *ngIf="!!isDesktop">{{ (post.suporting_material?.length ?? 0) + 1 }} Documentos</span>
               </div>
             </div>
   
@@ -166,16 +166,16 @@
   
             <mat-chip-list class="tags">
               <mat-chip class="academic-level-tag">
-                <span *ngIf="!isMobile">Nivel académico: {{ post.academic_level.name }}</span>
-                <span *ngIf="isMobile">{{ post.academic_level.name }}</span>
+                <span *ngIf="!!isDesktop">Nivel académico: {{ post.academic_level.name }}</span>
+                <span *ngIf="!isDesktop">{{ post.academic_level.name }}</span>
               </mat-chip>
               <mat-chip class="axis-tag">
-                <span *ngIf="!isMobile">Eje: {{ post.axis.name }}</span>
-                <span *ngIf="isMobile">{{ post.axis.name }}</span>
+                <span *ngIf="!!isDesktop">Eje: {{ post.axis.name }}</span>
+                <span *ngIf="!isDesktop">{{ post.axis.name }}</span>
               </mat-chip>
               <mat-chip class="subject-tag">
-                <span *ngIf="!isMobile">Asignatura: {{ post.axis.subject.name }}</span>
-                <span *ngIf="isMobile">{{ post.axis.subject.name }}</span>
+                <span *ngIf="!!isDesktop">Asignatura: {{ post.axis.subject.name }}</span>
+                <span *ngIf="!isDesktop">{{ post.axis.subject.name }}</span>
               </mat-chip>
             </mat-chip-list>
           </div>
