fix(rounded-select): fix mobile styles

--- a/src/assets/styles/design/_fonts.scss
+++ b/src/assets/styles/design/_fonts.scss
@@ -1,4 +1,4 @@
-// Font sizes calculated with: https://xgkft.csb.app/
+// Font sizes calculated with: https://xgkft.csb.app/ [320px, 1440px]
 // --fs-example: clamp(min size (mobile), 0.6818rem + 5.9659vw, max size (desktop));
 
 :root {
