--- a/src/app/shared/components/rounded-select/rounded-select.component.html
+++ b/src/app/shared/components/rounded-select/rounded-select.component.html
@@ -1,11 +1,11 @@
-<button class="button-toggle-select" [disabled]="disabled" (click)="toggleSelect(custom_select)">
-  <span>{{ textValue }}</span>
+<button class="rounded-button" [disabled]="disabled" (click)="toggleSelect(custom_select)">
+  <span>{{ textValue ?? baseText }}</span>
   <mat-icon>expand_more</mat-icon>
 </button>
 
-<mat-form-field>
+<mat-form-field class="sr-only">
   <mat-label>{{ textValue }}</mat-label>
-  <mat-select [formControl]="_formControl!" disableOptionCentering #custom_select>
+  <mat-select [formControl]="formControl!" disableOptionCentering #custom_select>
       <mat-option *ngIf="searchInput">
         <ngx-mat-select-search
           [formControl]="search"
@@ -15,8 +15,8 @@
         </ngx-mat-select-search>
       </mat-option>
 
-      <mat-option *ngIf="!!_formControl!.value && resetButton" [value]="null">Borrar</mat-option>
-      <mat-divider *ngIf="!!_formControl!.value && resetButton"></mat-divider>
+      <mat-option *ngIf="!!formControl!.value && resetButton" [value]="null">Borrar</mat-option>
+      <mat-divider *ngIf="!!formControl!.value && resetButton"></mat-divider>
 
       <ng-container *ngIf="!hasGroups">
         <mat-option [value]="option" *ngFor="let option of filteredOptions">
